[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/collectables/CollectableHandler.gd" type="Script" id=1]
[ext_resource path="res://objects/collectables/AllCollectables/BlueEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/collectables/AllCollectables/BlueCollectable.tscn" type="PackedScene" id=3]

[node name="CollectableHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="ActiveCollectableEffectsContainer" type="Node2D" parent="."]

[node name="AllEffects" type="Node2D" parent="."]
visible = false

[node name="BlueEffect" parent="AllEffects" instance=ExtResource( 2 )]

[node name="ActiveCollectablesContainer" type="Node2D" parent="."]

[node name="AllCollectables" type="Node2D" parent="."]
visible = false

[node name="BlueCollectable" parent="AllCollectables" instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
